# AstrBot

./: .astrbot  .gitignore  README.md  README_en.md  README_ja.md  llms.txt  main.py  pyproject.toml  requirements.txt
astrbot/api/: message_components.py
astrbot/cli/: README.MD  REAMDE.MD  __init__.py  __main__.py  init.py  run.py
astrbot/cli/conf/: __init__.py  __main__.py  get.py  set.py  utils.py
astrbot/cli/plug/: __init__.py  __main__.py  install.py  list.py  new.py  remove.py  search.py  update.py
astrbot/cli/utils/: __init__.py  basic.py  display.py  plugin.py  valutils.py  version_comparator.py
astrbot/core/: __init__.py  conversation_mgr.py  core_lifecycle.py  file_token_service.py  initial_loader.py  log.py  updator.py
astrbot/core/message/: components.py
astrbot/core/platform/: astr_message_event.py  manager.py  message_type.py  platform.py  platform_metadata.py  register.py
astrbot/core/provider/: entities.py  func_tool_manager.py  provider.py
astrbot/core/provider/sources/: openai_source.py  whisper_api_source.py  zhipu_source.py
astrbot/core/star/: context.py  star_handler.py  star_manager.py
astrbot/core/utils/: io.py  pip_installer.py
astrbot/dashboard/: server.py
astrbot/dashboard/routes/: chat.py  config.py
dashboard/: package.json  tsconfig.json  tsconfig.vite-config.json
dashboard/src/: main.ts
dashboard/src/router/: index.ts
dashboard/src/scss/: style.scss
dashboard/src/scss/components/: _VButtons.scss  _VCard.scss  _VShadow.scss  _VTabs.scss
dashboard/src/scss/layout/: _container.scss  (+1 more)
dashboard/src/stores/: auth.ts  common.ts  customizer.ts
rust/: Cargo.toml
src/astrbot/api/: all.py  message_components.py
src/astrbot/cli/: __init__.py  __main__.py  init.py
src/astrbot/core/: __init__.py  astrbot_config_mgr.py  astrbox.cp310-win_amd64.pyd  conversation_mgr.py  core_lifecycle.py  event_bus.py  file_token_service.py  initial_loader.py  log.py  persona_mgr.py  platform_message_history_mgr.py  updater.py  updator.py  zip_updater.py  zip_updator.py
src/astrbot/dashboard/: server.py
tests/: test_dashboard.py
(+129 files in other folders)
