[project]
name = "AstrBot"
version = "3.5.22"
description = "易上手的多平台 LLM 聊天机器人及开发框架"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiocqhttp>=1.4.4",
    "aiodocker>=0.24.0",
    "aiohttp>=3.11.18",
    "aiosqlite>=0.21.0",
    "anthropic>=0.51.0",
    "anyio>=4.9.0",
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.4",
    "certifi>=2025.4.26",
    "chardet~=5.2.0",
    "colorlog>=6.9.0",
    "cryptography>=44.0.3",
    "dashscope>=1.23.2",
    "defusedxml>=0.7.1",
    "dingtalk-stream>=0.22.1",
    "docstring-parser>=0.16",
    "faiss-cpu>=1.10.0",
    "filelock>=3.18.0",
    "google-genai>=1.14.0",
    "googlesearch-python>=1.3.0",
    "lark-oapi>=1.4.15",
    "lxml-html-clean>=0.4.2",
    "mcp>=1.8.0",
    "openai>=1.78.0",
    "ormsgpack>=1.9.1",
    "pillow>=11.2.1",
    "pip>=25.1.1",
    "psutil>=5.8.0",
    "py-cord>=2.6.1",
    "pydantic~=2.10.3",
    "pydub>=0.25.1",
    "pyjwt>=2.10.1",
    "python-telegram-bot>=22.0",
    "qq-botpy>=1.2.1",
    "quart>=0.20.0",
    "readability-lxml>=0.8.4.1",
    "rich>=14.0.0",
    "silk-python>=0.2.6",
    "slack-sdk>=3.35.0",
    "telegramify-markdown>=0.5.1",
    "toml>=0.10.2",
    "watchfiles>=1.0.5",
    "websockets>=15.0.1",
    "wechatpy>=1.8.18",
]

[project.scripts]
astrbot = "astrbot.cli:cli"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.ruff]

line-length = 88 

target-version = "py310"

[tool.uv.sources]
silk-python = { git = "https://github.com/synodriver/pysilk.git" }

[tool.hatch.build.targets.wheel]
packages = ["src/astrbot"]
